fixed some changes on small and medium viewports

--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -14,14 +14,33 @@ header {
   margin-bottom: 25px;
 }
 
+/* Banner */
+
+#banner {
+  background-color: #d25252;
+  color: black;
+  padding: 5px;
+  font-size: 1.5rem;
+  font-weight: 800;
+  text-align: center;
+}
+
+/* #banner {
+  display: none;
+} */
+
+/* #banner.open {
+  display: block;
+} */
+
 /* Main style - Placeholders - */
-main > p {
+/* main > p {
   height: 5em;
   border: 2px solid gray;
   padding: 1rem;
   background-color: rgb(226, 223, 223);
-}
-main div.placeholder {
+} */
+/* main div.placeholder {
   display: grid;
   grid-template-rows: 1fr 1fr;
   height: 15em;
@@ -29,8 +48,8 @@ main div.placeholder {
   padding: 1rem;
   background-color: rgb(226, 223, 223);
   margin-bottom: 15px;;
-}
-main div p {
+} */
+/* main div p {
   display: inline;
   border: 1px solid rgb(170, 170, 170);
   padding: 10px;
@@ -41,6 +60,170 @@ main div p.spotTwo, p.spotOne {
 }
 
 main p.spotThree, .join {
+  display: none;
+} */
+
+/* Holders style */
+
+main .events, .localWthr, .localNews, .placeholder, .joinUs {
+  height: auto;
+  padding: 1rem;
+  background-color: rgb(228, 228, 228);
+  margin-top: 1em;
+  box-shadow: 5px 10px 8px #888888;
+}
+
+/* Hero */
+
+main div.hero{
+  position: relative;
+
+}
+.heroImg {
+  position: relative;
+  display: block;
+  width: 100%;
+  object-fit: cover;
+  margin-bottom: 1em;
+
+}
+.heroBtn {
+  position: absolute;
+  background-color: rgb(21, 28, 94); 
+  color: white;
+  padding: .5rem .5rem;
+  text-decoration: none;
+  text-align: center;
+  border-radius: 10px;
+  height: auto;
+  bottom: 1rem;
+  right: 1rem;
+}
+
+.heroP {
+  position: absolute;
+  color: white;
+  text-decoration: overline;
+  top: .1rem;
+  left: .1rem;
+  padding: .5rem .5rem;
+  font-size: 2rem;
+  border-color: transparent;
+}
+
+/* Event */
+.events h1, .event h2, .event p, .event a {
+  margin: .2em;
+  align-content: center;
+  color:  rgb(21, 28, 94); 
+  text-align: center; 
+}
+main div.events h1, div.localNews h1 {
+  color: rgb(21, 28, 94);
+}
+.events a {
+  text-decoration: none;
+  margin-left: 8em;
+  color:#d25252;
+}
+.events a:hover {
+  text-decoration: none;
+  color: rgb(21, 28, 94);
+}
+
+/* Weather */
+.localWthr {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 2em 1fr 1em 1em 2em;
+}
+.localWthr img.wIcon {
+  grid-column: 1/2;
+  grid-row: 2/4;
+}
+.localWthr p span.temp {
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+.localWthr h2, .localWthr p {
+  margin: 0;
+}
+.localWthr h2 {
+  grid-column: 1/3;
+  grid-row: 1/2;
+  text-align: center;
+}
+.localWthr .iconDesc {
+  grid-column: 2/3;
+  grid-row: 3/4;
+}
+.localWthr hr {
+  grid-column: 1/3;
+  grid-row: 4/5;
+}
+.localWthr .ws {
+  grid-column: 1/2;
+  grid-row: 5/6;
+}
+.localWthr .windSpeed {
+  grid-column: 2/3;
+  grid-row: 5/6;
+}
+.localWthr .wc {
+  grid-column: 1/2;
+  grid-row: 6/7;
+}
+.localWthr .wChill {
+  grid-column: 2/3;
+  grid-row: 6/7;
+}
+.localWthr h2{
+  color: rgb(21, 28, 94);
+  height: 1em;
+}
+.localWthr .wIcon {
+  max-width: 80%;
+  justify-self: center;
+  margin: 0;
+}
+.localWthr p {
+  color: black;
+  justify-self: center;
+}
+.localWthr p.deg {
+  font-size: 2.5rem;
+  color: #d25252;
+  justify-self: center;
+  align-self: center;
+  font-weight: 600;
+}
+
+/* News */
+.localNews {
+  text-align: center;
+  color: rgb(21, 28, 94);
+}
+
+/* Spots */
+main div.spotTwo, div.spotOne, div.spotThree {
+  margin: 0;
+  text-align: center;
+  color: rgb(21, 28, 94);
+}
+main div.spotOne h2, div.spotTwo h2, div.spotThree h2 {
+  color: rgb(21, 28, 94);
+}
+
+.joinUs, .placeholder div.spotThree {
+  display: none;
+}
+
+main div .spotTwo img {
+  width: 50%;
+}
+
+/* Join Us */
+.joinUs, .placeholder div.spotThree {
   display: none;
 }
 
