--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -43,6 +43,30 @@
 			margin-right: 2em;
 	}
 
+	/* Hero */
+
+	main .hero {
+    grid-column: 2/3;
+    grid-row: 1/3;
+    margin: 0 .5em .5em .5em ;
+	}
+	.heroImg {
+			margin: 0;
+	}
+	.heroBtn {
+			position: absolute;
+			bottom: 2rem;
+			right: 1em;
+			width: 9em;
+			font-size: 1.5rem;
+	}
+
+	.heroP {
+		position: absolute;
+		top: .1rem;
+		font-size: 3rem;
+	}
+
 	aside {
 		align-items: center;
 		text-align: center;
